--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <packaging>jar</packaging>
     <groupId>org.webjars</groupId>
     <artifactId>ckeditor</artifactId>
-    <version>4.4.6-SNAPSHOT</version>
+    <version>4.4.6</version>
     <name>CKEditor</name>
     <description>WebJar for CKEditor</description>
     <url>http://webjars.org</url>
@@ -53,7 +53,7 @@
         <url>http://github.com/webjars/ckeditor</url>
         <connection>scm:git:https://github.com/webjars/ckeditor.git</connection>
         <developerConnection>scm:git:https://github.com/webjars/ckeditor.git</developerConnection>
-        <tag>HEAD</tag>
+        <tag>ckeditor-4.4.6</tag>
     </scm>
     
     <build>
@@ -79,13 +79,13 @@
 
                                 <echo message="moving resources" />
                                 <move todir="${destDir}/basic">
-                                    <fileset dir="${project.build.directory}/basic/ckeditor" excludes="samples/"/>
+                                    <fileset dir="${project.build.directory}/basic/ckeditor" excludes="samples/" />
                                 </move>
                                 <move todir="${destDir}/standard">
-                                    <fileset dir="${project.build.directory}/standard/ckeditor" excludes="samples/"/>
+                                    <fileset dir="${project.build.directory}/standard/ckeditor" excludes="samples/" />
                                 </move>
                                 <move todir="${destDir}/full">
-                                    <fileset dir="${project.build.directory}/full/ckeditor" excludes="samples/"/>
+                                    <fileset dir="${project.build.directory}/full/ckeditor" excludes="samples/" />
                                 </move>
 
                             </target>
