--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <packaging>jar</packaging>
     <groupId>org.webjars</groupId>
     <artifactId>ckeditor</artifactId>
-    <version>31.0.0</version>
+    <version>31.0.1-SNAPSHOT</version>
     <name>CKEditor</name>
     <description>WebJar for CKEditor</description>
     <url>http://webjars.org</url>
@@ -62,7 +62,7 @@
         <url>http://github.com/webjars/ckeditor</url>
         <connection>scm:git:https://github.com/webjars/ckeditor.git</connection>
         <developerConnection>scm:git:https://github.com/webjars/ckeditor.git</developerConnection>
-        <tag>ckeditor-31.0.0</tag>
+        <tag>HEAD</tag>
     </scm>
     
     <build>
